syntax = "proto3";

package dnsblockchain.dnsblockchain.v1;

import "amino/amino.proto";
import "dnsblockchain/dnsblockchain/v1/domain.proto";
import "dnsblockchain/dnsblockchain/v1/params.proto";
import "gogoproto/gogo.proto";

option go_package = "dnsblockchain/x/dnsblockchain/types";

// GenesisState defines the dnsblockchain module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated Domain domain_list = 2 [(gogoproto.nullable) = false];
  uint64 domain_count = 3;
  repeated string permitted_tlds = 4; // <-- ESTE CAMPO ES CRUCIAL
}